[package]
name = "xmip-send"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/IlleNilsson/xmip-send"
description = "Send Ports, Send Groups, Send Locations and transport-neutral egress contracts for Xmip."

[dependencies]
xmip-core = { git = "https://github.com/IlleNilsson/xmip-core", rev = "83f68c482f42a22866902ff7d78e7a3b1d14dcdf" }
xmip-message = { git = "https://github.com/IlleNilsson/xmip-message", rev = "e7967fc12dcc21197e8cc468b23210b244d83537" }
xmip-stream = { git = "https://github.com/IlleNilsson/xmip-stream", rev = "3855d6b37988f0ff5962a27662824d5da20cce70" }
